<resources>
    <string name="app_name">حالات واتس أب فيديو</string>
    <string name="tab_text_1">حب</string>
    <string name="tab_text_2">حزن</string>
    <string name="tab_text_3">كوميديا</string>
    <string name="tab_text_5">منوعات</string>
    <string name="action_settings">الإعدادات</string>
    <string name="newWord">(جديد)</string>

    <string name="NotProgrammedYet">هذا الأمر لم تتم برمجته بعد</string>
    <string name="InternetConnection">لازم تتصل بالإنترنت أول..</string>


    <string name="Random">ترتيب عشوائي</string>
    <string name="NewFirst">الجديد أولاً</string>
    <string name="MostViews">الأكثر مشاهدة</string>


    <string name="about">عن التطبيق</string>
    <string name="aboutAppContent">".أفضل تطبيق عربي لحالات الفيديو مع امكانية تحميل الفيديوهات ومشاركتها أرجو أن ننال إعجابكم.. إذا اعجبكم التطبيق نرجو مساعدتنا في نشره واعطائنا خمس نجوم في المتجر لأننا مازلنا في مرحلة تطوير البرنامج "</string>
    <string name="rate">تقييم</string>
    <string name="share">مشاركة</string>
    <string name="facebook">زيارة صفحة الفيس بوك</string>
    <string name="youtube">زورو قناة اليوتيوب</string>
    <string name="feedBack">سياسة الخصوصية</string>
    <string name="privacyPolicy">راسلنا</string>

    <string name="aboutProgrammer">عن المبرمج</string>
    <string name="aboutProgrammerContent">Programmed by: Bashir Manafikhi</string>


    <string-array name="notes_array">
        <item>شكلو اتصالك بالنت ضعيف شوي.. استنا ثواني بس ورجاع حدث الصفحة</item>
        <item>شكراً لاستخدامك تطبيقنا إذا عجبك التطبيق ادعمنا من خلال نشر التطبيق وتقييمنا في المتجر خمس نجوم</item>
        <item>ماعجبك التطبيق؟ كتبلي رأيك بتعليق عالمتجر ورح اعمل جهدي لأخليه أحلى </item>
        <item>لاتنسى تبتسم اليوم :)</item>
    </string-array>

    <string name="title_activity_about_app">AboutApp</string>


    <string name="facebook_app_id" translatable="false">584448962647962</string>
    <string name="facebook_client_token" translatable="false">167ec50e92ece6a967e616bab754da28</string>


    <!--     real id -->
    <string name="banner_activity_id" translatable="false">ca-app-pub-1685177955120006/5220379199</string>
    <string name="banner_video_show_id" translatable="false">ca-app-pub-1685177955120006/8437104476</string>
    <string name="banner_show_videos_list_id" translatable="false">ca-app-pub-1685177955120006/3487295005</string>
    <string name="interstitial_download_video_id" translatable="false">ca-app-pub-1685177955120006/7897340545</string>
    <string name="between_Videos_native" translatable="false">ca-app-pub-1685177955120006/3640076896</string>
    <string name="rewarded_download_video" translatable="false">ca-app-pub-1685177955120006/1790074060</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-1685177955120006~3053789974</string>

<!--     test id-->
<!--    <string name="banner_activity_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="banner_video_show_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="banner_show_videos_list_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="interstitial_download_video_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="between_Videos_native" translatable="false">ca-app-pub-3940256099942544/2247696110</string>-->
<!--    <string name="rewarded_download_video" translatable="false">ca-app-pub-3940256099942544/5224354917</string>-->
<!--    <string name="admob_app_id" translatable="false">ca-app-pub-1685177955120006~3053789974</string>-->


    <string name="tab_text_6">إسلامي</string>
    <string name="tab_text_7">الرئيسية</string>
    <string name="likedVideos_activity_title">فيديوهات أعجبتك</string>
    <string name="MostLiked">الأكثر إعجاباً</string>
    <string name="internet_notes_2">شكراً لاستخدامكن تطبيقنا</string>
    <string name="bestVideoAppInTheWorld">أفضل تطبيق لحالات الفيديو   في العالم العربي</string>
    <string name="AppName">حالات واتس اب فيديو</string>
    <string name="videosSort">ترتيب الفيديوهات</string>
    <string name="ProgrammerEmail">bashir.manafikhi@gmail.com</string>
    <string name="videosYouLiked">فيديوهات أعجبتك :)</string>
    <string name="otherVideos">فيديوهات أخرى في قد تعجبك</string>
    <string name="yes_">نعم</string>
    <string name="no_">لا</string>
    <string name="videosCountInThisCategory">عدد الفيديوهات في هذا التصنيف</string>
    <string name="videoAlreadyExist">الفيديو موجود مسبقا</string>
    <string name="startDownloading">بدء التحميل</string>
    <string name="videoWillDownloadFirst">سيتم تحميل الفيديو أولاً, انتظر قليلاً</string>
    <string name="internet_notes_1">لا يوجد اتصال بالأنترنت</string>
    <string name="versionNameIs">رقم الإصدار</string>
    <string name="EndOfCategory">انتهت الحالات في هذا القسم, سنضيف المزيد في أقرب وقت</string>
    <string name="didNotDownload">عذراً, لم يتم التحميل.. تأكد أنك متصل بالأنترنت وأنه لديك مساحة كافية</string>
    <string name="refreshThePage">حدث الصفحة لتطبيق التغييرات</string>
    <string name="retrievingData">جاري تحميل البيانات انتظر قليلاً :)</string>
    <string name="RetrievingDataFromLocal">جاري جلب البيانات انتظر قليلاً :)</string>
    <string name="downloadingData">جاري تحميل البيانات</string>
    <string name="videosCount">عدد الفيديوهات:</string>
    <string name="randomVideo">فيديو عشوائي</string>
    <string name="allVideos">جميع الفيديوهات</string>
    <string name="favoriteVideos">فيديوهات أعجبتني</string>
    <string name="close">اغلاق</string>
    <string name="tab_text_8">رومنسية</string>
    <string name="tab_text_9">كتابية</string>
    <string name="newVideos">الفيديوهات الجديدة</string>
    <string name="open">فتح</string>

    <string name="tab_text_10">خواطر</string>
    <string name="tab_text_4">حكم</string>
    <string name="ClickAgainToExit">اضغط مرة أخرى للخروج</string>
    <string name="search_results">نتائج البحث</string>
    <string name="AreYouWantToWatchAd">يجب أن تشاهد إعلاناً من أجل تحميل مقطع الفيديو.. هل أنت موافق؟</string>
    <string name="decline">لا أوافق</string>
    <string name="accept">أوافق</string>
    <string name="loseReward">عذراً يجب مشاهدة الإعلان للنهاية من أجل تحميل المقطع!</string>
    <string name="MainPageMainText">غرف دردشة وتعارف  والمزيد من الفيديوهات والصور والرسائل والكثير الكثير من الحالات ستجدونها في تطبيقنا الجديد ♥ حملوه من خلال الضغط على هذا الزر</string>
    <string name="mahwous_videos_button">فيديوهات مهووس</string>
    <string name="mahwous_quotes_button">حالات مهووس الكتابية</string>
    <string name="searching">جاري البحث..</string>
    <string name="MostDownload">الأكثر تحميلاً</string>
    <string name="Ad">إعلان</string>
    <string name="Great_you_rewarded">رائع، لقد تمت مكافئتك ويتم الآن تحميل الفيديو</string>

</resources>
