<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    android:fitsSystemWindows="true"
    tools:context=".Avtivities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tertiaryDarkColor"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="@color/primaryColor"
                android:padding="4dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:subtitleTextColor="@color/primaryTextColor"
                app:title="@string/app_name"
                app:titleTextColor="@color/primaryTextColor" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primaryColor"
                app:tabIndicatorColor="@color/secondaryLightColor"
                app:tabIndicatorHeight="4dp"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/secondaryLightColor"
                app:tabTextColor="@color/primaryTextColor">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon3"
                    android:text="@string/tab_text_7" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon13"
                    android:text="@string/tab_text_6" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon10"
                    android:text="@string/tab_text_1" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon12"
                    android:text="@string/tab_text_3" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon4"
                    android:text="@string/tab_text_2" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon2"
                    android:text="@string/tab_text_8" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon1"
                    android:text="@string/tab_text_10" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon8"
                    android:text="@string/tab_text_9" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon15"
                    android:text="@string/tab_text_4" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/myicon3"
                    android:text="@string/tab_text_5" />

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.booking.rtlviewpager.RtlViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/adView">

            </com.booking.rtlviewpager.RtlViewPager>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/tertiaryDarkColor"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_activity_id" />


            <io.github.yavski.fabspeeddial.FabSpeedDial
                android:id="@+id/fabButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/adView"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/fab_margin"
                android:contentDescription="@string/videosSort"
                app:fabBackgroundTint="@color/secondaryLightColor"
                app:fabDrawable="@drawable/ic_sort_black_24dp"
                app:fabGravity="bottom_end"
                app:fabMenu="@menu/float_button_menu"
                app:miniFabBackgroundTint="@color/primaryColor"
                app:miniFabDrawableTint="@color/primaryDarkColor"
                app:miniFabTitleTextColor="@color/primaryDarkColor" />


        </RelativeLayout>


    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/tertiaryDarkColor"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/tertiaryTextColor"
        app:itemTextColor="@color/primaryTextColor"
        app:menu="@menu/drawer_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
