<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

<!--    <item
        android:id="@+id/allVideosItem"
        android:icon="@drawable/ic_all_inclusive_black"
        android:title="@string/allVideos" />

    <item
        android:id="@+id/newVideosItem"
        android:icon="@drawable/ic_fiber_new_black"
        android:title="@string/newVideos" />

    <item
        android:id="@+id/randomVideoItem"
        android:icon="@drawable/ic_shuffle_black_24dp"
        android:title="@string/randomVideo" />-->

    <item
        android:id="@+id/likedVideosItem"
        android:icon="@drawable/favorite_black"
        android:title="@string/favoriteVideos" />

    <item
        android:id="@+id/rateItem"
        android:icon="@drawable/star_border_black"
        android:title="@string/rate" />
    <item
        android:id="@+id/ShareItem"
        android:icon="@drawable/share_black"
        android:title="@string/share"/>


    <item
        android:id="@+id/aboutProgrammerItem"
        android:icon="@drawable/help_outline_black"
        android:title="@string/aboutProgrammer" />

    <item
        android:id="@+id/aboutItem"
        android:icon="@drawable/help_outline_black"
        android:title="@string/about"/>


    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item1"
            android:icon="@drawable/myicon11"
            android:title="drawerTitle1" />
        <item
            android:id="@+id/drawer_item2"
            android:icon="@drawable/myicon11"
            android:title="drawerTitle1" />
        <item
            android:id="@+id/drawer_item3"
            android:icon="@drawable/myicon11"
            android:title="drawerTitle1" />
    </group>-->

    <!--<item android:title="new Group">
        <menu>
            <item
                android:id="@+id/drawer_item4"
                android:icon="@drawable/myicon11"
                android:title="drawerTitle1" />
            <item
                android:id="@+id/drawer_item5"
                android:icon="@drawable/myicon11"
                android:title="drawerTitle1" />
        </menu>
    </item>-->

</menu>